; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_clipboard.c_create_mf.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_clipboard.c_create_mf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@__const.create_mf.rect = private unnamed_addr constant %struct.TYPE_3__ { i32 0, i32 0, i32 100, i32 100 }, align 4
@ETO_OPAQUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"Test String\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @create_mf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_mf() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = alloca i32, align 4
  %3 = bitcast %struct.TYPE_3__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %3, i8* align 4 bitcast (%struct.TYPE_3__* @__const.create_mf.rect to i8*), i64 16, i1 false)
  %4 = call i32 @CreateMetaFileA(i32* null)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @ETO_OPAQUE, align 4
  %7 = call i32 @strlen(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @ExtTextOutA(i32 %5, i32 0, i32 0, i32 %6, %struct.TYPE_3__* %1, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %7, i32* null)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @CloseMetaFile(i32 %9)
  ret i32 %10
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @CreateMetaFileA(i32*) #2

declare dso_local i32 @ExtTextOutA(i32, i32, i32, i32, %struct.TYPE_3__*, i8*, i32, i32*) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @CloseMetaFile(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
